<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lifecycle_py</name>
  <version>0.33.3</version>
  <description>Package containing demos for rclpy lifecycle implementation</description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="audrow@openrobotics.org">Audrow Nash</maintainer>

  <license>Apache License 2.0</license>

  <author email="ivanpauno@ekumenlabs.com">Ivan Santiago Paunovic</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>lifecycle</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
